Add recipe images brief introduction recipe

--- a/recipes/duck-breast.html
+++ b/recipes/duck-breast.html
@@ -25,7 +25,25 @@
         </nav>
         
         <h1>Pan Seared Duck Breast</h1>
+
+        <figure>
+
+            <img src="../../odin-recipes/images/duck-breast.jpg" width="300" height="300" alt="Pan seared duck breast with mashed potatoes, red cherry glaze garish with fresh sage and rosemary">
+
+            <figcaption>
+                Pan-Seared Duck Breast with mashed potatoes, red cherry glaze, fresh sage and rosemary garnish.
+                This dish would pair nicely with a glass of Shiraz. 
+                Photo Provided: <a href="https://www.istockphoto.com">istockphoto</a>
+            </figcaption>
+
+        </figure>
         
+        <p>
+            As the days grow shorter and the air turns crisp, there's no better way to indulge in the flavors of the season than
+            with a Pan Seared Duck Breast. This rich and savory dish, paired with creamy mashed potatoes and a sweet-tart red cherry 
+            glaze, is the epitome of autumnal comfort food. To complement the robust flavors of the duck, a glass of full-bodied Shiraz 
+            offers a perfect pairing, with its dark fruit notes and velvety tannins enhancing the overall dining experience.
+        </p>
     </body>
 
 </html>
