Homepage image introduction
Recipe card  all introductions

Add recipe fig-salad.html

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -26,12 +26,12 @@
 
         <figure>
 
-            <img src="../../odin-recipes/images/creme-brulee.jpg" width="300" height="300" alt="Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint">
+            <img src="../../odin-recipes/images/creme-brulee.jpg" width="375" height="300" alt="Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint">
 
             <figcaption>
-                Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint.
-                A great addition to this desert would be a classic Italian Espresso with a lemon twist.
-                Photo Provided:  <a href="https://www.istockphoto.com">istockphoto</a>
+               <p>Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint.</p>
+               <p>A great addition to this desert would be a classic Italian Espresso with a lemon twist.</p>
+               <p>Photo Provided:<a href="https://www.istockphoto.com">istockphoto</a></p>
             </figcaption>
         
         </figure>
