--- a/recipes/duck-breast.html
+++ b/recipes/duck-breast.html
@@ -28,12 +28,12 @@
 
         <figure>
 
-            <img src="../../odin-recipes/images/duck-breast.jpg" width="300" height="300" alt="Pan seared duck breast with mashed potatoes, red cherry glaze garish with fresh sage and rosemary">
+            <img src="../../odin-recipes/images/duck-breast.jpg" width="375" height="300" alt="Pan seared duck breast with mashed potatoes, red cherry glaze garish with fresh sage and rosemary">
 
             <figcaption>
-                Pan-Seared Duck Breast with mashed potatoes, red cherry glaze, fresh sage and rosemary garnish.
-                This dish would pair nicely with a glass of Shiraz. 
-                Photo Provided: <a href="https://www.istockphoto.com">istockphoto</a>
+               <p>Pan-Seared Duck Breast with mashed potatoes, red cherry glaze, fresh sage and rosemary garnish.</p>
+               <p>This dish would pair nicely with a glass of Shiraz.</p> 
+               <p>Photo Provided: <a href="https://www.istockphoto.com">istockphoto</a></p>
             </figcaption>
 
         </figure>
