Add missing attributes images
Security against phishing redirects

Link images to outside source
missing target="_blank" and
rel="nopener noreferrer" this
will provide added security for the image authors and to their links.

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -31,7 +31,7 @@
             <figcaption>
                <p>Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint.</p>
                <p>A great addition to this desert would be a classic Italian Espresso with a lemon twist.</p>
-               <p>Photo Provided:<a href="https://www.istockphoto.com">istockphoto</a></p>
+               <p>Photo Provided:<a href="https://www.istockphoto.com" target="_blank" rel="noopener noreferrer">istockphoto</a></p>
             </figcaption>
         
         </figure>
