--- a/recipes/duck-breast.html
+++ b/recipes/duck-breast.html
@@ -33,7 +33,7 @@
             <figcaption>
                <p>Pan-Seared Duck Breast with mashed potatoes, red cherry glaze, fresh sage and rosemary garnish.</p>
                <p>This dish would pair nicely with a glass of Shiraz.</p> 
-               <p>Photo Provided: <a href="https://www.istockphoto.com">istockphoto</a></p>
+               <p>Photo Provided: <a href="https://www.istockphoto.com" target="_blank" rel="noopener noreferrer">istockphoto</a></p>
             </figcaption>
 
         </figure>
