--- a/recipes/fig-salad.html
+++ b/recipes/fig-salad.html
@@ -33,7 +33,7 @@
                 <figcaption>
                     <p>Roasted Fig Salad with walnuts and feta cheese.</p>
                     <p>This salad would pair well with a white Chardonnay.</p>
-                    <p>Photo Provided: <a href="https://www.istockphoto.com">istockphoto</a></p>
+                    <p>Photo Provided: <a href="https://www.istockphoto.com" target="_blank" rel="noopener noreferrer">istockphoto</a></p>
                 </figcaption>    
             
             </figure>
