Updates: photo link missing justifed <p>

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                 connect with loved ones and appreciate the simple pleasures of life. This three course menu recipe playfully stands out as a great
                 way to share in these moments. 
             <br>
-
                 <em>Buon Appetito!</em>
+            <br>
+            <br>
+            <br>
+                <i>Photo by:</i> <a href="/photographer/vexels-94700" target="_blank" rel="noopener noreferrer">Vexels.com</a> on <a href="/" target="_blank" rel="noopener noreferrer">Freeimages.com</a> 
             </p>    
 
         </section>
