Update filesystem css hero img
Filesystem remove file replaced with two files index.css homepage styles recipe-card.css for styling the recipes

Replaced hero image displayed was wrong updated to the right hero image updated link color for author

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Caramel Crème Brûlée</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../recipes.css/recipe-card.css">
     </head>
     
     <body>
@@ -27,7 +27,7 @@
 
         <figure>
 
-            <img src="../../odin-recipes/images/creme-brulee.jpg" width="600" height="400" alt="Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint">
+            <img src="../images/creme-brulee.jpg" width="600" height="400" alt="Caramel Crème Brûlée with a strawberry garnish and a fresh sprig of mint">
 
         </figure>
         
