--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
-        <link rel="stylesheet" href="../odin-recipes/styles.css">
+        <link rel="stylesheet" href="../odin-recipes/recipes.css/index.css">
     </head>
     
     <body>
