--- a/recipes/duck-breast.html
+++ b/recipes/duck-breast.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pan Seared Duck Breast</title>
-        <link rel="stylesheet" href="../styles.css"">
+        <link rel="stylesheet" href="../recipes.css/recipe-card.css">
     </head>
     
     <body>
