--- a/recipes/fig-salad.html
+++ b/recipes/fig-salad.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Roasted Fig Salad</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../recipes.css/recipe-card.css">
     </head>
     
     <body>
